@@ -2,10 +2,11 @@
 
  NEW FEATURES
 - plot for residuals by age
-- scas method to run several sca
+- scas method to run several sca in parallel
 - plot for multiple fits
 - new classes for plural fit objects
 - addition method for FLStock and fit residuals
+- getX tolerance to id unindentifiable parameters changed from 1e-7 to 1e-4, drops more parameters.
 
  BUG FIXES:
 - sca use of covariates fixed
